# tchsm-libdtc

./: .gitignore  .install_dependencies.sh  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  blocking_sql3.h  config  database.c  database.h  dtc.h  err.c  err.h  libdtc.conf  main.c  master.c  messages.c  messages.h  node.c  structs.c  structs.h  structs_test.c  unit_test.c  utilities.c  utilities.h
cmake/: FindBotan.cmake  FindCHECK.cmake  FindDTC.cmake  FindDTTCLib.cmake  FindDT_TCLib.cmake  FindJSON-C.cmake  FindLibConfig.cmake  FindLibSodium.cmake  FindSqlite3.cmake  FindTCLib.cmake  FindZeroMQ.cmake
cryptoki/: .gitmodules  CMakeLists.txt  README.md  config.json  main.cpp  pkcs11.cpp  test.c
cryptoki/cmake/: FindBotan.cmake
cryptoki/cryptoki/: .gitmodules
cryptoki/cryptoki/cmake/: FindBotan.cmake
cryptoki/cryptoki/cryptoki_compat/: pkcs11.h
cryptoki/cryptoki/hsm/: Application.cpp  CryptoObject.cpp  Session.cpp  Session.h  Slot.h  Token.h  config.h
cryptoki/dt_tclib/: Makefile  config  database.c  database.h  dtc.h  err.h  master.c  messages.c  messages.h  node.c  node2.config  structs.c  structs.h
cryptoki/dt_tclib/logger/: logger.c  logger.h
cryptoki/dt_tclib/src/: Makefile  database.c  dtc.h  err.c  err.h  main.c  master.c  node.c  structs.c  structs_test.c  utilities.c  utilities.h
cryptoki/dt_tclib/src/logger/: logger.c
cryptoki/dt_tclib/tests/: unit_test.c
cryptoki/hsm/: Application.cpp  Application.h  Configuration.cpp  Configuration.h  CryptoObject.h  Database.cpp  Database.h  Session.cpp  Session.h  Slot.cpp
logger/: logger.c  logger.h
scripts/: create_config.py
src/: CMakeLists.txt  Makefile  database.c  database.h  dtc.c  dtc.h  err.c  main.c  master.c  messages.c  messages.h  node.c  structs.c  structs.h  utilities.c  utilities.h
src/core/: CMakeLists.txt  dtc.c  err.c  messages.c  structs.c  utilities.c
src/core/include/: logger.h  messages.h  utilities.h
src/cryptoki/: .gitignore  CMakeLists.txt  Configuration.cpp  CryptoObject.cpp  Database.cpp  Database.h  Mutex.cpp  OSMutex.cpp  Session.cpp  Session.h  Slot.cpp  Token.cpp  Token.h  cryptoki.conf  main.cpp  pkcs11.cpp
src/cryptoki/hsm/: Application.cpp  Configuration.cpp  Configuration.h  Database.cpp  Database.h  Mutex.cpp  Mutex.h  OSMutex.cpp  OSMutex.h  Session.cpp  Session.h  Slot.cpp  Slot.h  Token.cpp
src/include/: dtc.h  dtc.h.in
src/logger/: logger.h
src/node/: CMakeLists.txt  blocking_sql3.h  database.c  database.h  node.c
src/scripts/: create_config.py
tests/: CMakeLists.txt  database_test.c  main.c  messages_test.c  structs_test.c
tests/system-test/: pkcs11_test  system_test.py
tests/system_test/: CMakeLists.txt  botan_test.cpp  dtc_master_test.c  pkcs_11_test.c  pkcs_11_test.py  requirements.txt  system_test.py
